# MerkLang

./: .gitignore  CMakeLists.txt  README.md  a_info.cpp  builtins.cpp  compare_merk_python.py  compile_commands.json  debugger_config.cpp  error  file_structure.txt  main.cpp  old_evaluations.txt  old_function_implementation.txt  old_node.cpp  reinstall_extension.sh  results.json  results_compare.json  runs.py  vcpkg.json
.cache/clangd/index/: AnyNode.cpp.EBAEADD29E61DB57.idx  ArgumentNode.cpp.5A72B3F02131108E.idx  ArgumentNode.hpp.48F33731A035B287.idx  Ast.cpp.77CBB3A23247C373.idx  (+138 more)
OLD_FILE_VERSIONS/: node.cpp  node.h
bench_py/: class_case.py  compute_loop.py  fib.py  file_static.py  test1.py
build-release/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  merk
include/ast/: Ast.hpp  AstBase.hpp  AstCallable.hpp  AstChain.hpp  AstClass.hpp  AstControl.hpp  AstFunction.hpp  AstMethod.hpp  AstNamespace.hpp  Exceptions.hpp  README.md  ast.h  ast_base.h  ast_callable.h  ast_chain.h  ast_class.h  ast_control.h  ast_function.h  ast_helpers.h  ast_method.h  ast_structures.h  ast_validate.h  exceptions.h  helpers.h
include/core/: EvalResult.hpp  Evaluator.h  Evaluator.hpp  FlowEvaluator.hpp  Parser.hpp  README.md  Scope.hpp  StackScope.hpp  Tokenizer.hpp  Type.hpp  TypeBuiltins.hpp  TypesFWD.hpp  builtins.h  context.h  errors.h  evaluator.h  node.h  parser.h  scope.h  tokenizer.h  types.h
include/helpers/: iterable.h
include/lex/: Lexer.hpp  Scanner.hpp  Structurizer.hpp
include/node/: node_finals.h  node_numbers.h  node_strings.h
include/tests/: test_ast.h  test_node.h  test_params.h  test_parser.h  test_tokenizer.h
include/utilities/: debugger.h  debugger.txt  debugging_functions.h  helper_functions.h  streaming.h  utilities.h
merk-extension/merk/: CHANGELOG.md  README.md  class.merk  file-icons.json  language-configuration.json  merk-0.0.1.vsix  package.json
src/: builtins.cpp
src/ast/: Ast.cpp  AstCallable.cpp  AstChain.cpp  AstClass.cpp  AstControl.cpp  AstFunction.cpp  AstMethod.cpp  AstNamespace.cpp  Exceptions.cpp  ast.cpp  ast_callable.cpp  ast_chain.cpp  ast_class.cpp  ast_clone.cpp  ast_collect.cpp  ast_control.cpp  ast_function.cpp  ast_getAll.cpp  ast_helpers.cpp  ast_method.cpp  ast_print.cpp  ast_structures.cpp  ast_validate.cpp  exceptions.cpp  helpers.cpp
src/core/: Evaluator.cpp  FlowEvaluator.cpp  Type.cpp  TypeBuiltins.cpp  context.cpp  evaluator.cpp  node.cpp  node_constructors.cpp  node_conversions.cpp  tokenizer.cpp  types.cpp
src/evaluators/: Evaluator.Callables.cpp  Evaluator.cpp  Executor.cpp  FastIR.cpp  FlowEvaluator.cpp  TypeEvaluator.cpp
src/helpers/: iterable.cpp
src/lex/: Lexer.cpp  Scanner.cpp  Structurizer.cpp
src/utilities/: debugger.cpp  helper_functions.cpp  lsan_defaults.cpp
(+186 files in other folders)
